--- a/index.html
+++ b/index.html
@@ -7,7 +7,58 @@
     <title>Movie App</title>
   </head>
   <body>
-
+    <header>
+      <form id="form">
+        <input
+                type="text"
+                id="search"
+                class="search"
+                placeholder="Search"
+        />
+      </form>
+    </header>
+    
+    <main id="main">
+      <div class="movie">
+        <img src="" alt="Image" />
+        <div class="movie-info">
+          <h3>Movie Title</h3>
+          <span class="green">9.9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Asperiores ea facere itaque magni molestias non officiis porro,
+          praesentium quis vero!
+        </div>
+      </div>
+      <div class="movie">
+        <img src="" alt="Image" />
+        <div class="movie-info">
+          <h3>Movie Title</h3>
+          <span class="red">9.9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Asperiores ea facere itaque magni molestias non officiis porro,
+          praesentium quis vero!
+        </div>
+      </div>
+      <div class="movie">
+        <img src="" alt="Image" />
+        <div class="movie-info">
+          <h3>Movie Title</h3>
+          <span class="orange">9.9</span>
+        </div>
+        <div class="overview">
+          <h3>Overview</h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Asperiores ea facere itaque magni molestias non officiis porro,
+          praesentium quis vero!
+        </div>
+      </div>
+    </main>
 
     <script src="script.js"></script>
   </body>
